<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AdminTools</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="IP">Server Address</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="port_too_small">Port must be higher than 0</string>
    <string name="port_too_big">Port must be lower than 65535</string>
    <string name="port_wrong_format">Wrong port format</string>
    <string name="address_unknown">Wrong IP address or host name</string>
    <string name="network_error">Network error</string>
    <string name="network_status_error">Error! Check your internet connection</string>
    <string name="title_activity_stats">Stats</string>
    <string name="unknown">unknown</string>
    <string name="generate_agent_key">Generate new agent\'s key</string>
    <string name="generate_agent_dialog">Do you really want to create new key?\nThis cannot be undone!</string>
    <string name="dialog_get_key_text">This is your new agent\'s key:</string>
    <string name="temperature">Temperature:\u0020</string>
    <string name="cpu">CPU usage:</string>
    <string name="ram">RAM usage:</string>
    <string name="uptime">Uptime:</string>
    <string name="services">Services</string>
    <string name="disks">Disks</string>
    <string name="available">Available</string>
    <string name="inavailable">Inavailable!</string>
    <string name="choose_agent_action">Choose action:</string>
    <string name="choose_agent_action_settings">Settings</string>
    <string name="choose_agent_action_charts">Charts</string>
    <string name="temp_path">Path to temperature sensor</string>
    <string name="temp_divider">Temperature divider</string>
    <string name="id">ID</string>
    <string name="interval">Interval</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="title_activity_charts">ChartsActivity</string>
    <string name="action_put_key">Set key</string>
    <string name="dialog_put_key_title">Put key</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="zero">0</string>
    <string name="dialog_set_interval">Set refresh interval</string>
    <string name="date_start">Begin</string>
    <string name="date_end">End</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="na">\u0020\u0020\u0020</string>
    <string name="cpu_chart">CPU</string>
    <string name="ram_chart">RAM</string>
    <string name="temp_chart">TEMP</string>
    <string name="disk_chart">DISK</string>
    <string name="refresh">Refresh</string>
    <string name="more">More</string>
    <string name="charts">Charts</string>
    <string name="alerts">Alerts</string>
    <string name="auth_error">Invalid Auth Key!\nSet right key and try again.</string>
    <string name="charts_size_zero">Error while fetching stats.</string>

</resources>