<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdminTools" >

    <TextView
        android:id="@+id/textView_IP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/IP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_IP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_IP"
        android:layout_centerHorizontal="true"
        android:inputType="textUri"
        android:ems="10" />

    <EditText
        android:id="@+id/editText_Port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Port"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:maxLength="5"
        android:inputType="numberDecimal" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_Port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_IP"
        android:layout_centerHorizontal="true"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Port"
        android:layout_centerHorizontal="true"
        android:onClick="onConnect"
        android:text="@string/connect" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView_Port"
        android:layout_marginBottom="107dp"
        android:onClick="test"
        android:text="testbutton" />

    <ProgressBar
        android:id="@+id/progressBar_connection"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_connect"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>
